--- a/aria2/root.lighttpd/defaults/lighttpd.conf
+++ b/aria2/root.lighttpd/defaults/lighttpd.conf
@@ -55,14 +55,14 @@ server.groupname     = "lighttpd"
 server.document-root = var.basedir + "/www"
 server.pid-file      = "/run/lighttpd.pid"
 
-server.errorlog      = var.logdir  + "/error.log"
-# log errors to syslog instead
-#   server.errorlog-use-syslog = "enable"
+# {{{ mod_accesslog
+accesslog.filename   = "/dev/stdout"
+# }}}
+
+server.errorlog      = "/dev/stderr"
 
 server.indexfiles    = ("index.php", "index.html",
-						"index.htm", "default.htm")
-
-# server.tag           = "lighttpd"
+                        "index.htm", "default.htm")
 
 server.follow-symlink = "enable"
 
@@ -105,29 +105,8 @@ server.follow-symlink = "enable"
 static-file.exclude-extensions = (".php", ".pl", ".cgi", ".fcgi")
 # }}}
 
-# {{{ mod_accesslog
-accesslog.filename   = var.logdir + "/access.log"
-# }}}
-
-# {{{ mod_dirlisting
-# enable directory listings
-#   dir-listing.activate      = "enable"
-#
-# don't list hidden files/directories
-#   dir-listing.hide-dotfiles = "enable"
-#
-# use a different css for directory listings
-#   dir-listing.external-css  = "/path/to/dir-listing.css"
-#
-# list of regular expressions.  files that match any of the
-# specified regular expressions will be excluded from directory
-# listings.
-#   dir-listing.exclude = ("^\.", "~$")
-# }}}
-
 # {{{ mod_access
 # see access.txt
-
 url.access-deny = ("~", ".inc")
 # }}}
 
@@ -176,22 +155,8 @@ url.access-deny = ("~", ".inc")
 
 # {{{ mod_compress
 # see compress.txt
-#
 # compress.cache-dir   = var.statedir + "/cache/compress"
 # compress.filetype    = ("text/plain", "text/html")
-# }}}
-
-# {{{ mod_proxy
-# see proxy.txt
-#
-# proxy.server               = ( ".php" =>
-#                               ( "localhost" =>
-#                                 (
-#                                   "host" => "192.168.0.101",
-#                                   "port" => 80
-#                                 )
-#                               )
-#                             )
 # }}}
 
 # {{{ mod_auth
@@ -224,7 +189,7 @@ url.access-deny = ("~", ".inc")
 # see rewrite.txt
 #
 # url.rewrite = (
-#	"^/$"		=>		"/server-status"
+#   "^/$"       =>      "/server-status"
 # )
 # }}}
 
@@ -232,7 +197,7 @@ url.access-deny = ("~", ".inc")
 # see redirect.txt
 #
 # url.redirect = (
-#	"^/wishlist/(.+)"		=>		"http://www.123.org/$1"
+#   "^/wishlist/(.+)"       =>      "http://www.123.org/$1"
 # )
 # }}}
 
@@ -250,21 +215,19 @@ url.access-deny = ("~", ".inc")
 
 # {{{ mod_expire
 # expire.url = (
-#	"/buggy/"		=>		"access 2 hours",
-#	"/asdhas/"		=>		"access plus 1 seconds 2 minutes"
+#   "/buggy/"       =>      "access 2 hours",
+#   "/asdhas/"      =>      "access plus 1 seconds 2 minutes"
 # )
 # }}}
 
 # {{{ mod_rrdtool
 # see rrdtool.txt
-#
 # rrdtool.binary  = "/usr/bin/rrdtool"
 # rrdtool.db-name = var.statedir + "/lighttpd.rrd"
 # }}}
 
 # {{{ mod_setenv
 # see setenv.txt
-#
 # setenv.add-request-header  = ( "TRAV_ENV" => "mysql://user@host/db" )
 # setenv.add-response-header = ( "X-Secret-Message" => "42" )
 # }}}
@@ -282,7 +245,6 @@ url.access-deny = ("~", ".inc")
 
 # {{{ mod_cml
 # see cml.txt
-#
 # don't forget to add index.cml to server.indexfiles
 # cml.extension               = ".cml"
 # cml.memcache-hosts          = ( "127.0.0.1:11211" )
@@ -290,7 +252,6 @@ url.access-deny = ("~", ".inc")
 
 # {{{ mod_webdav
 # see webdav.txt
-#
 # $HTTP["url"] =~ "^/dav($|/)" {
 #     webdav.activate = "enable"
 #     webdav.is-readonly = "enable"
@@ -298,7 +259,6 @@ url.access-deny = ("~", ".inc")
 # }}}
 
 # {{{ extra rules
-#
 # set Content-Encoding and reset Content-Type for browsers that
 # support decompressing on-thy-fly (requires mod_setenv)
 # $HTTP["url"] =~ "\.gz$" {
@@ -311,13 +271,6 @@ url.access-deny = ("~", ".inc")
 #     mimetype.assign = (".bz2" => "text/plain")
 # }
 #
-# }}}
-
-# {{{ debug
-# debug.log-request-header   = "enable"
-# debug.log-response-header  = "enable"
-# debug.log-request-handling = "enable"
-# debug.log-file-not-found   = "enable"
 # }}}
 
 # vim: set ft=conf foldmethod=marker et :
