--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "mailcow"]
 	path = mailcow
 	url = https://github.com/mailcow/mailcow-dockerized.git
+[submodule "deluge"]
+	path = deluge
+	url = https://github.com/devster31/docker-deluge.git
