--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,18 +55,23 @@ services:
   deluge:
     build:
       context: deluge
+      args:
+        deluge_version: 1.3.15
+        libtorrent_version: 1.0.16
     environment:
       - "PGID=${PGID}"
       - "PUID=${PUID}"
       - "TZ=${TZ}"
       - "UMASK_SET=002"
     labels:
-      - ovh.dispenser.deluge
+      ovh.dispenser.service: "deluge"
     ports:
-      - "8112:8112"
-      - "58846:58846"
-      - "58946:58946"
-      - "58946:58946/udp"
+      - "127.0.0.1:8112:8112"
+      # it's suggested to use an ssh tunnel to connect to the daemon over the internet
+      - "127.0.0.1:58846:58846"
+      # both the ranges below can be used for incoming or outgoing ports
+      - "58926:58946"
+      - "58926:58946/udp"
     restart: unless-stopped
     volumes:
       - "${MOUNT}/docker/data/deluge:/config"
