--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -131,6 +131,21 @@ services:
       - "TZ=${TZ}"
     labels:
       ovh.dispenser.filebot: watcher
+  ombi:
+    container_name: ombi
+    environment:
+      - "PUID=${PUID}"
+      - "PGID=${PGID}"
+      - "TZ=${TZ}"
+    image: linuxserver/ombi
+    # image: rogueosb/ombi
+    ports:
+      - 127.0.0.1:3579:3579
+    restart: unless-stopped
+    volumes:
+      - "${MOUNT}/docker/data/ombi:/config"
+      - "TZ=${TZ}"
+      - "PGID=${PGID}"
   znc:
     container_name: znc
     environment:
