--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,32 @@
 ---
 services:
+  # certbot:
+  #   container_name: certbot
+  #   environment:
+  #     CLOUDFLARE_API_KEY: "${CLOUDFLARE_API_KEY}"
+  #     CLOUDFLARE_EMAIL: "${EMAIL}"
+  #   image: certbot/certbot
+  #   volumes:
+  #     - "${MOUNT}/certbot:/etc/letsencrypt"
+  jd2:
+    container_name: jd2
+    environment:
+      USER_ID: "${PGID}"
+      GROUP_ID: "${PUID}"
+      TZ: "${TZ}"
+      DISPLAY_WIDTH: 1280
+      DISPLAY_HEIGHT: 720
+      # - "SECURE_CONNECTION=1"
+    image: jlesage/jdownloader-2
+    labels:
+      ovh.dispenser.service: "syncthing"
+    ports:
+      - 5800:5800
+      - 5900:5900
+    restart: unless-stopped
+    volumes:
+      - "/home/devsterknight/jd2/config:/config:rw"
+      - "/home/devsterknight/jd2/Downloads:/output:rw"
   flood:
     build:
       context: flood
